Added and completed CodeAlpha Project

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
       <div id="MusicPlayer">
         <div class="header">
-          <marquee id="Songname" behavior="scroll">SongName</marquee>
-          <marquee id="SingerName">SingerName</marquee>
+          <p id="Songname" >SongName</p>
+          <p id="SingerName">SingerName</p>
         </div>
         <div id="Img">
-          <img id="MusicImage" src="./Images/Music image.webp" alt="" />
+          <video id="MusicImage" src="./Images/5180-183786417.mp4" > </video>
         </div>
         <div id="Details"></div>
         <div id="Controls">
